--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,5 @@
 architectury {
-    common(rootProject.platforms.split(",")) {
-        it.platformPackage "neoforge", "forge"
-    }
+    common rootProject.enabled_platforms.split(',')
 }
 
 dependencies {
@@ -15,7 +13,7 @@ dependencies {
 publishing {
     publications {
         mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
+            artifactId = rootProject.archives_name
             from components.java
         }
     }
