--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge,neoforge
+enabled_platforms=fabric,neoforge
 
-minecraft_version=1.20.4
+minecraft_version=1.20.5
 
-archives_base_name=randomtp
-mod_version=8.1.0+1.20
+archives_name=randomtp
+mod_version=8.1.1+1.20
 maven_group=com.gmail.picono435
 
-fabric_loader_version=0.15.1
-fabric_api_version=0.91.2+1.20.4
+fabric_loader_version=0.15.10
+fabric_api_version=0.97.6+1.20.5
 
 forge_version=49.0.3
 
-neoforge_version=20.4.5-beta
+neoforge_version=20.5.3-beta
