--- a/settings.gradle
+++ b/settings.gradle
@@ -2,15 +2,14 @@ pluginManagement {
     repositories {
         maven { url "https://maven.fabricmc.net/" }
         maven { url "https://maven.architectury.dev/" }
-        maven { url "https://maven.minecraftforge.net/" }
+        maven { url "https://files.minecraftforge.net/maven/" }
         gradlePluginPortal()
     }
 }
 
-include("common")
-include("fabric")
-include("forge")
-include("minecraftforge")
-include("neoforge")
+rootProject.name = 'RandomTP-1.20'
 
-rootProject.name = "RandomTP-1.20"
+include 'common'
+include 'fabric'
+//include 'forge'
+include 'neoforge'
