--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -31,8 +31,8 @@ repositories {
 
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
-    shadowBundle(modImplementation("me.lucko:fabric-permissions-api:0.3.1")) { transitive = false }
+    modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version+$rootProject.minecraft_version"
+    include(modImplementation("me.lucko:fabric-permissions-api:0.3.1")) { transitive = false }
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
@@ -57,7 +57,6 @@ shadowJar {
     relocate 'io.leangen', 'com.gmail.picono435.dependencies.leagen'
     relocate 'org.checkerframework', 'com.gmail.picono435.dependencies.checkerframework'
     relocate 'com.google.errorprone', 'com.gmail.picono435.dependencies.errorprone'
-    relocate 'me.lucko', 'com.gmail.picono435.dependencies.lucko'
 }
 
 remapJar {
@@ -79,19 +78,5 @@ sourcesJar {
 components.java {
     withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
         skip()
-    }
-}
-
-publishing {
-    publications {
-        mavenFabric(MavenPublication) {
-            artifactId = rootProject.archives_name + "-" + project.name
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
     }
 }
