--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-enabled_platforms=fabric,neoforge
-
-minecraft_version=1.20.5
+enabled_platforms=fabric,neoforge,forge
 
 archives_name=randomtp
-mod_version=8.1.1+1.20
+mod_version=8.1.0+1.20
 maven_group=com.gmail.picono435
 
+minecraft_version=1.20.6
+
 fabric_loader_version=0.15.10
-fabric_api_version=0.97.6+1.20.5
+fabric_api_version=0.97.8
 
-forge_version=49.0.3
+forge_version=50.0.0
 
-neoforge_version=20.5.3-beta
+neoforge_version=20.6.12-beta
