--- a/settings.gradle
+++ b/settings.gradle
@@ -11,5 +11,5 @@ rootProject.name = 'RandomTP-1.20'
 
 include 'common'
 include 'fabric'
-//include 'forge'
-include 'neoforge'
+include 'forge'
+//include 'neoforge'
