--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
 architectury {
-    common("fabric", "forge")
+    common rootProject.enabled_platforms.split(',')
 }
 
 dependencies {
@@ -13,7 +13,7 @@ dependencies {
 publishing {
     publications {
         mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
+            artifactId = rootProject.archives_name
             from components.java
         }
     }
