--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,15 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
+enabled_platforms=fabric,forge
+
 minecraft_version=1.19.4
 
-archives_base_name=randomtp
-mod_version=7.3.0+1.19
+archives_name=randomtp
+mod_version=7.4.0
 maven_group=com.gmail.picono435
 
-fabric_loader_version=0.14.21
-fabric_api_version=0.82.0+1.19.4
+fabric_loader_version=0.15.11
+fabric_api_version=0.87.2
 
-forge_version=45.0.64
+forge_version=45.2.15
