--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.daemon=false
 enabled_platforms=fabric,neoforge,forge
 
 archives_name=randomtp
-mod_version=8.1.0
+mod_version=9.0.1
 maven_group=com.gmail.picono435
 
-minecraft_version=1.20.6
+minecraft_version=1.21.4
 
-fabric_loader_version=0.15.11
-fabric_api_version=0.100.0
+fabric_loader_version=0.16.9
+fabric_api_version=0.114.0
 
-forge_version=50.1.3
+forge_version=54.0.16
 
-neoforge_version=20.6.113-beta
+neoforge_version=21.1.22
